Data entry and tweaks.

--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -38,21 +38,20 @@
 .content {
   position: relative;
   height: 300px;
-  padding: 30px 0px;
+  padding: 30px 50px;
   display: flex; }
 
 .content img {
   height: 167.33px; }
 
 .puzzle-container {
-  width: 200px;
+  width: 230px;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-family: "Oswald", sans-serif;
-  color: #646B69;
-  margin: 0 0px 0 50px; }
+  color: #646B69; }
 
 .name_style {
   font-family: "Source Sans Pro", sans-serif;
