--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -45,23 +45,25 @@
 .content {
     position: relative;
     height: 300px;
-    padding: 30px 0px; 
+    padding: 30px 50px; 
     display: flex;
+    // overflow: scroll;
 }
 
 .content img {
     height: 167.33px;
+    // max-width: 200px;
 }
 
 .puzzle-container {
-    width: 200px;
+    width: 230px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-family: $secondaryFontFamily;
     color: $darkColor;
-    margin: 0 0px 0 50px;
+    // margin: 0 0px 0 50px;
 }
 
 .name_style {
