--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -15,7 +15,7 @@
 .product_content {
     position: relative;
     height: 300px;
-    padding: 30px 0px; 
+    padding: 30px 50px; 
     // display: flex;
 }
 
@@ -24,14 +24,14 @@
 }
 
 .puzzle-container {
-    width: 200px;
+    // width: 200px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-family: $secondaryFontFamily;
     color: $darkColor;
-    margin: 0 0px 0 50px;
+    // margin: 0 0px 0 50px;
     a {
         text-decoration: none;
     }
