--- a/src/components/Results/FilteredResults.css
+++ b/src/components/Results/FilteredResults.css
@@ -7,24 +7,25 @@
   background: #E4E5E6;
   padding: 80px; }
 
-.content {
+.results_content {
   position: relative;
+  width: 100%;
   height: 300px;
   padding: 30px 0px;
-  display: flex; }
+  display: flex;
+  flex-wrap: wrap; }
 
-.content img {
+.results_content img {
   height: 167.33px; }
 
 .puzzle-container {
-  width: 200px;
   height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   font-family: "Oswald", sans-serif;
   color: #646B69;
-  margin: 0 0px 0 50px; }
+  margin: 0 50px 50px 0px; }
   .puzzle-container a {
     text-decoration: none; }
 
