--- a/src/components/Results/FilteredResults.scss
+++ b/src/components/Results/FilteredResults.scss
@@ -8,26 +8,29 @@
     padding: 80px;
 }
 
-.content {
+.results_content {
     position: relative;
+    width: 100%;
     height: 300px;
     padding: 30px 0px; 
     display: flex;
+    flex-wrap: wrap;
 }
 
-.content img {
+.results_content img {
     height: 167.33px;
+    // max-width: 200px;
 }
 
 .puzzle-container {
-    width: 200px;
+    // width: 200px;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-family: $secondaryFontFamily;
     color: $darkColor;
-    margin: 0 0px 0 50px;
+    margin: 0 50px 50px 0px;
     a {
         text-decoration: none;
     }
