--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -42,7 +42,7 @@
     }
 }
 
-.content {
+.new_content {
     position: relative;
     height: 300px;
     padding: 30px 50px; 
@@ -50,9 +50,75 @@
     // overflow: scroll;
 }
 
-.content img {
+.new_content img {
     height: 167.33px;
     // max-width: 200px;
+}
+
+.sale_puzzles {
+    position: absolute;
+    top: 540px;
+    left: 80px;
+    width: 60vw;
+    height: 380px;
+    background: white;
+}
+
+.sale_content {
+    position: relative;
+    height: 300px;
+    padding: 30px 50px; 
+    display: flex;
+    // overflow: scroll;
+}
+
+.sale_content img {
+    height: 167.33px;
+    // max-width: 200px;
+}
+
+.accessories {
+    position: absolute;
+    top: 540px;
+    right: 80px;
+    width: 23vw;
+    height: 380px;
+    background: white;
+}
+
+.accessory_content {
+    position: relative;
+    height: 300px;
+    padding: 30px 0px 30px 50px; 
+    display: flex;
+    // overflow: scroll;
+}
+
+.accessory_content img {
+    height: 167.33px;
+    // max-width: 200px;
+}
+
+.acc_title {
+    position: relative;
+    width: 100%;
+    height: 80px;
+    background: $darkColor;
+    font-family: $secondaryFontFamily;
+    color: white;
+    font-size: 40px;
+    padding: 19px 0px;
+    text-align: center;
+}
+
+.acc_title {
+    a {
+    text-decoration: none;
+    color: white;
+    }
+    a:hover {
+        color: $mainColor;
+    }
 }
 
 .puzzle-container {
