--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -1,9 +1,9 @@
 @import '../../_sassVars.scss';
 
-.main_section {
+.cart_main_section {
     position: relative;
     width: 100%;
-    height: 200vh;
+    // height: 200vh;
     background: $mainBackgroundColor;
     padding: 80px;
 }
