--- a/src/components/Product/product.css
+++ b/src/components/Product/product.css
@@ -1,9 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,500,600,700");
-.main_section {
+.p_main_section {
   position: relative;
   width: 100%;
-  height: 200vh;
   background: #E4E5E6;
   padding: 80px; }
 
@@ -19,6 +18,7 @@
   height: 167.33px; }
 
 .puzzle-container {
+  white-space: nowrap;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -32,6 +32,8 @@
   font-family: "Source Sans Pro", sans-serif;
   color: #5EAC57;
   font-weight: 700; }
+  .name_style a {
+    text-decoration: none; }
 
 .addtocart_btn {
   background: #5EAC57;
