--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -1,8 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,500,600,700");
-.main_section {
+.a_main_section {
   position: relative;
   width: 100%;
-  height: 200vh;
   background: #E4E5E6;
   padding: 80px; }
