--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -7,10 +7,10 @@
 .main_section {
     position: relative;
     width: 100%;
-    height: 200vh;
+    height: 221vh;
     background: $mainBackgroundColor;
     padding: 80px;
-    overflow-x: hidden;
+    // overflow: scroll;
 }
 
 .new_puzzles {
@@ -47,7 +47,8 @@
     height: 300px;
     padding: 30px 50px; 
     display: flex;
-    // overflow: scroll;
+    overflow-y: hidden;
+    overflow-x: scroll;
 }
 
 .new_content img {
@@ -69,7 +70,8 @@
     height: 300px;
     padding: 30px 50px; 
     display: flex;
-    // overflow: scroll;
+    overflow-y: hidden;
+    overflow-x: scroll;
 }
 
 .sale_content img {
@@ -91,7 +93,8 @@
     height: 300px;
     padding: 30px 0px 30px 50px; 
     display: flex;
-    // overflow: scroll;
+    overflow-y: hidden;
+    overflow-x: scroll;
 }
 
 .accessory_content img {
@@ -122,18 +125,51 @@
 }
 
 .puzzle-container {
-    width: 230px;
+    // width: 240px;
+    white-space: nowrap;
     height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     font-family: $secondaryFontFamily;
     color: $darkColor;
+    a {
+        text-decoration: none;
+    }
     // margin: 0 0px 0 50px;
+}
+
+.accessory-container {
+    width: 247px;
+    white-space: nowrap;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    font-family: $secondaryFontFamily;
+    color: $darkColor;
+    a {
+        text-decoration: none;
+    }
+    // margin: 0 0px 0 50px;
+}
+
+.gallery {
+    position: absolute;
+    top: 1000px;
+    left: 80px;
+    right: 80px;
+    // width: 89vw;
+    height: 500px;
+    background: white;
+    margin: 0 0 80px 0;
 }
 
 .name_style {
     font-family: $mainFontFamily;
     color: $mainColor;
     font-weight: 700;
+    a {
+        text-decoration: none;
+    }
 }
