--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -1,9 +1,9 @@
 @import '../../_sassVars.scss';
 
-.main_section {
+.p_main_section {
     position: relative;
     width: 100%;
-    height: 200vh;
+    // height: 200vh;
     background: $mainBackgroundColor;
     padding: 80px;
 }
@@ -24,7 +24,8 @@
 }
 
 .puzzle-container {
-    // width: 200px;
+    // width: 240px;
+    white-space: nowrap;
     height: 100%;
     display: flex;
     flex-direction: column;
@@ -41,6 +42,9 @@
     font-family: $mainFontFamily;
     color: $mainColor;
     font-weight: 700;
+    a {
+        text-decoration: none;
+    }
 }
 
 .addtocart_btn {
