--- a/src/components/Results/FilteredResults.css
+++ b/src/components/Results/FilteredResults.css
@@ -1,17 +1,14 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,500,600,700");
-.main_section {
+.r_main_section {
   position: relative;
   width: 100%;
-  height: 200vh;
   background: #E4E5E6;
   padding: 80px; }
 
 .results_content {
   position: relative;
   width: 100%;
-  height: 300px;
-  padding: 30px 0px;
   display: flex;
   flex-wrap: wrap; }
 
@@ -19,7 +16,8 @@
   height: 167.33px; }
 
 .puzzle-container {
-  height: 100%;
+  white-space: nowrap;
+  height: 240px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -33,3 +31,5 @@
   font-family: "Source Sans Pro", sans-serif;
   color: #5EAC57;
   font-weight: 700; }
+  .name_style a {
+    text-decoration: none; }
