--- a/src/components/Results/FilteredResults.scss
+++ b/src/components/Results/FilteredResults.scss
@@ -1,9 +1,9 @@
 @import '../../_sassVars.scss';
 
-.main_section {
+.r_main_section {
     position: relative;
     width: 100%;
-    height: 200vh;
+    // height: 200vh;
     background: $mainBackgroundColor;
     padding: 80px;
 }
@@ -11,8 +11,8 @@
 .results_content {
     position: relative;
     width: 100%;
-    height: 300px;
-    padding: 30px 0px; 
+    // height: 300px;
+    // padding: 30px 0px; 
     display: flex;
     flex-wrap: wrap;
 }
@@ -23,8 +23,9 @@
 }
 
 .puzzle-container {
-    // width: 200px;
-    height: 100%;
+    // min-width: 225px;
+    white-space: nowrap;
+    height: 240px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -40,4 +41,7 @@
     font-family: $mainFontFamily;
     color: $mainColor;
     font-weight: 700;
+    a {
+        text-decoration: none;
+    }
 }
