--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -5,11 +5,18 @@
   width: 100%;
   overflow: hidden; }
 
+.cart_counter {
+  position: absolute;
+  color: white;
+  top: 86px;
+  right: 95px;
+  font-family: "Source Sans Pro", sans-serif; }
+
 .cart {
   position: absolute;
   z-index: 1;
   width: 40px;
-  right: 115px;
+  right: 125px;
   top: 72px; }
 
 .utilities {
