--- a/src/components/Cart/Cart.scss
+++ b/src/components/Cart/Cart.scss
@@ -6,4 +6,50 @@
     // height: 200vh;
     background: $mainBackgroundColor;
     padding: 80px;
+    display: flex;
+    flex-direction: column;
+}
+
+.cart_container {
+    position: relative;
+    width: 100%;
+    // height:380px;
+    background: white;
+    margin-bottom: 20px;
+}
+
+.cart_content {
+    position: relative;
+    // height: 300px;
+    padding: 30px 50px; 
+    display: flex;
+    flex-wrap: wrap;
+}
+
+.cart_content img {
+    height: 167.33px;
+    // max-width: 200px;
+}
+
+.checkout_container {
+    position: relative;
+    // bottom: 0;
+    width: 100%;
+    height: 100px;
+}
+
+.checkout {
+    position: absolute;
+    right: 0px;
+    height: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.total {
+    font-family: $mainFontFamily;
+    font-size: 30px;
+    font-weight: 700;
+    color: $darkColor;
 }
