--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -5,13 +5,27 @@
     width: 100%;
     // height: 58.5vh;
     overflow: hidden;
+    background-image: url('https://i.imgur.com/ciAXsvn.jpg');
+    background-size: cover;
+    background-position: center top;
+    z-index: 1;
+}
+
+.user {
+    position: absolute;
+    top: 88px;
+    right: 200px;
+    color: $mainColor;
+    font-family: $mainFontFamily;
+    letter-spacing: 2px;
+    text-align: left;
 }
 
 .cart_counter {
     position: absolute;
     color: white;
     top: 86px;
-    right: 95px;
+    right: 81px;
     font-family: $mainFontFamily;
 }
 
@@ -19,7 +33,7 @@
     position: absolute;
     z-index: 1;
     width: 40px;
-    right: 125px;
+    right: 110px;
     top: 72px; 
 }
 
@@ -33,10 +47,10 @@
     font-size: 13px;
     color: white;
     width: 470px;
-    padding: 0 72px 0 0;
+    padding: 0 80px 0 0;
     z-index: 1;
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     float: right;
 }
 
@@ -50,25 +64,45 @@
     text-decoration: none;
 }
 
-// .dark_box {
-//     position: absolute;
-//     top: 0;
-//     background: #09160C;
-//     width: 100%;
-//     height: 83.5vh; 
-//     opacity: .6;
-// }
-
-.hero {
-    position: absolute;
-    width: 100%;
-    z-index: -1
+.logout {
+    position: relative;
+    top: 139px;
+    text-decoration: none;
+    font-family: $mainFontFamily;
+    font-weight: 600;
+    letter-spacing: 3px;
+    font-size: 13px;
+    color: white;
+    width: 400px;
+    padding: 0 80px 0 0;
+    z-index: 1;
+    display: flex;
+    justify-content: space-between;
+    float: right;
 }
+
+.logout a:link {
+    color: white;
+    text-decoration: none;
+}
+
+.logout a:visited {
+    color: white;
+    text-decoration: none;
+}
+
+// .hero {
+//     position: absolute;
+//     width: 100%;
+//     z-index: -1;
+//     min-width: 50%;
+// }
 
 .logo {
     position: absolute;
     top: 50px;
     left: 72px;
     z-index: 1;
-    width: 425px;
+    // width: 425px;
+    width: 30%;
 }
