--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -1,5 +1,13 @@
 @import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700");
 @import url("https://fonts.googleapis.com/css?family=Oswald:400,500,600,700");
+.empty_cart {
+  background: #E4E5E6;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 20px;
+  text-align: center;
+  height: 150px;
+  padding-top: 72px; }
+
 .cart_main_section {
   position: relative;
   width: 100%;
@@ -21,12 +29,70 @@
   flex-wrap: wrap; }
 
 .cart_content img {
-  height: 167.33px; }
+  height: 100px; }
+
+.category_headers {
+  position: relative;
+  width: 100%;
+  font-family: "Source Sans Pro", sans-serif;
+  font-weight: 700;
+  color: #5EAC57;
+  display: flex; }
+
+.cart_line {
+  position: absolute;
+  top: 55px;
+  background: #5EAC57;
+  height: 1px;
+  width: 92%; }
+
+.c_puzzle-container {
+  white-space: nowrap;
+  height: 200px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  font-family: "Oswald", sans-serif;
+  color: #646B69; }
+  .c_puzzle-container a {
+    text-decoration: none; }
+
+.image_pos {
+  width: 150px;
+  margin-right: 70px; }
+
+.name_pos {
+  width: 250px;
+  margin-right: 50px; }
+
+.pieces_pos {
+  width: 50px;
+  margin-right: 70px; }
+
+.brand_pos {
+  width: 100px;
+  margin-right: 100px; }
+
+.quantity_pos {
+  width: 100px;
+  margin-right: 50px; }
+
+.price_pos {
+  width: 70px;
+  margin-right: 30px; }
+
+.remove_pos {
+  width: 70px; }
+
+.trashcan {
+  width: 30px; }
 
 .checkout_container {
   position: relative;
   width: 100%;
-  height: 100px; }
+  height: 100px;
+  margin-top: 20px; }
 
 .checkout {
   position: absolute;
@@ -37,7 +103,100 @@
   justify-content: space-between; }
 
 .total {
-  font-family: "Source Sans Pro", sans-serif;
+  font-family: "Oswald", sans-serif;
   font-size: 30px;
   font-weight: 700;
   color: #646B69; }
+
+.fixed_cart {
+  position: fixed;
+  bottom: 72px;
+  right: -25px;
+  width: 500px;
+  height: 300px;
+  overflow: scroll;
+  background: linear-gradient(to right, #D1EBD0 0%, white 75%);
+  padding: 30px 30px 30px 20px;
+  border: 5px double #646B69;
+  border-radius: 15px;
+  transition: .5s; }
+
+.fixed_container {
+  display: flex; }
+
+.hide {
+  position: fixed;
+  bottom: 72px;
+  right: -425px;
+  width: 500px;
+  height: 130px;
+  overflow: hidden;
+  background: #646B69;
+  padding: 30px 30px 30px 20px;
+  border: 5px double white;
+  border-radius: 15px;
+  z-index: 100px;
+  display: flex;
+  opacity: .6;
+  transition: .5s; }
+
+.hide:hover {
+  opacity: 1; }
+
+.fixed_title {
+  font-family: "Oswald", sans-serif;
+  color: #646B69;
+  font-size: 30px;
+  transform: rotate(-90deg);
+  transform-origin: 0 0%;
+  position: relative;
+  top: 60px; }
+
+.title_hide {
+  font-family: "Oswald", sans-serif;
+  color: white;
+  font-size: 30px;
+  transform: rotate(-90deg);
+  transform-origin: 0 0%;
+  position: relative;
+  top: 60px; }
+
+.half_hide {
+  display: none; }
+
+.fixed-puzzle-container {
+  white-space: nowrap;
+  display: flex;
+  flex-direction: row;
+  font-family: "Oswald", sans-serif;
+  color: #646B69;
+  margin-bottom: 20px; }
+  .fixed-puzzle-container a {
+    text-decoration: none; }
+  .fixed-puzzle-container img {
+    width: 100px; }
+
+.fixed_info {
+  display: flex;
+  flex-direction: column;
+  margin-left: 12px;
+  line-height: 23px; }
+
+.viewcart_btn {
+  background: #5EAC57;
+  border-radius: 25px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 14px;
+  font-weight: 700;
+  letter-spacing: 1px;
+  border: 2px solid #5EAC57;
+  padding: 11px 22px;
+  box-shadow: 2px 2px 8px #646B69;
+  margin-top: 15px;
+  width: 125px;
+  height: 40px;
+  position: relative;
+  left: 55px; }
+  .viewcart_btn a {
+    color: white;
+    text-decoration: none; }
