--- a/src/components/Product/Product.scss
+++ b/src/components/Product/Product.scss
@@ -14,36 +14,107 @@
 
 .product_content {
     position: relative;
-    height: 300px;
+    // height: 500px;
     padding: 30px 50px; 
     // display: flex;
 }
 
-.product_content img {
-    height: 167.33px;
-}
+// .product_content img {
+//     height: 167.33px;
+// }
 
-.puzzle-container {
+.product_puzzle-container {
     // width: 240px;
     white-space: nowrap;
-    height: 100%;
+    // height: 100%;
+    display: flex;
+    flex-direction: row;
+    font-family: $mainFontFamily;
+    color: $darkColor;
+    margin: 72px 60px;
+    a {
+        text-decoration: none;
+    }
+    img {
+        width: 500px;
+    }
+}
+
+.product_info {
+    display: flex;
+    flex-direction: column;
+}
+
+.product_info_top {
+    margin-left: 72px;
+    height: 400px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    font-family: $secondaryFontFamily;
-    color: $darkColor;
-    // margin: 0 0px 0 50px;
+}
+
+.product_info_bottom {
+    margin-left: 72px;
+    margin-top: 10px;
+    // height: 250px;
+    display: flex;
+    flex-direction: column;
+}
+
+.bold {
+    font-weight: 700;
+    line-height: 30px;
+}
+
+.product_name_style {
+    color: $mainColor;
+    font-size: 30px;
+    font-weight: 700;
+    // margin-bottom: 10px;
     a {
         text-decoration: none;
     }
 }
 
-.name_style {
-    font-family: $mainFontFamily;
-    color: $mainColor;
+.product_brand_style {
+    font-family: $secondaryFontFamily;
+    font-size: 18px;
+}
+
+.product_price_style {
+    font-family: $secondaryFontFamily;
+    font-size: 24px;
     font-weight: 700;
-    a {
-        text-decoration: none;
+    margin: -5px 0 15px 0;
+}
+
+.description {
+    margin-top: 40px;
+    width: 100%;
+    word-break: normal;
+    white-space: normal;
+    line-height: 24px;
+    border-bottom: 1px solid $mainColor;
+    padding-bottom: 50px;
+}
+
+.quantity_container {
+    margin-top: 50px;
+}
+
+.quantity {
+    width: 90px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    margin-top: 20px;
+    button {
+        width: 25px;
+        height: 25px;
+        border: 1px solid $darkColor;
+        border-radius: 6px;
+        background: white;
+        color: $darkColor;
     }
 }
 
@@ -58,5 +129,6 @@
     border: none;
     padding: 10px 20px;
     box-shadow: 2px 2px 8px $darkColor;
-    margin: 50px;
+    margin-top: 40px;
+    width: 150px;
 }
