--- a/src/components/Results/FilteredResults.css
+++ b/src/components/Results/FilteredResults.css
@@ -15,6 +15,15 @@
 .results_content img {
   height: 167.33px; }
 
+.new_title {
+  position: relative;
+  width: 100%;
+  height: 80px;
+  font-family: "Oswald", sans-serif;
+  color: #646B69;
+  font-size: 40px;
+  margin-bottom: 50px; }
+
 .puzzle-container {
   white-space: nowrap;
   height: 240px;
@@ -33,3 +42,11 @@
   font-weight: 700; }
   .name_style a {
     text-decoration: none; }
+
+.price_box {
+  display: flex; }
+
+.op {
+  text-decoration: line-through;
+  color: #A7A4A4;
+  margin-right: 10px; }
