--- a/src/components/Results/FilteredResults.scss
+++ b/src/components/Results/FilteredResults.scss
@@ -22,6 +22,16 @@
     // max-width: 200px;
 }
 
+.new_title {
+    position: relative;
+    width: 100%;
+    height: 80px;
+    font-family: $secondaryFontFamily;
+    color: $darkColor;
+    font-size: 40px;
+    margin-bottom: 50px;
+}
+
 .puzzle-container {
     // min-width: 225px;
     white-space: nowrap;
@@ -44,4 +54,14 @@
     a {
         text-decoration: none;
     }
+}
+
+.price_box {
+    display: flex;
+}
+
+.op {
+    text-decoration: line-through;
+    color:#A7A4A4;
+    margin-right: 10px;
 }
