puzzle finder toggle working

--- a/src/components/Cart/Cart.css
+++ b/src/components/Cart/Cart.css
@@ -124,7 +124,7 @@
 .fixed_container {
   display: flex; }
 
-.hide {
+.cart_hide {
   position: fixed;
   bottom: 72px;
   right: -425px;
@@ -140,7 +140,7 @@
   opacity: .6;
   transition: .5s; }
 
-.hide:hover {
+.cart_hide:hover {
   opacity: 1; }
 
 .fixed_title {
