--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -14,6 +14,79 @@
   padding: 0 80px;
   z-index: 15; }
 
+.pf_container {
+  position: absolute;
+  top: 15px;
+  left: 100px;
+  height: 525px;
+  width: 300px;
+  background: white;
+  border: 8px double #5EAC57;
+  border-radius: 8px;
+  box-shadow: 2px 4px 15px #646B69;
+  padding: 20px;
+  transition: .5s; }
+
+.pf_hide {
+  position: absolute;
+  top: 15px;
+  left: 100px;
+  height: 80px;
+  width: 300px;
+  background: white;
+  border: 8px double #5EAC57;
+  border-radius: 8px;
+  box-shadow: 2px 4px 15px #646B69;
+  padding: 20px;
+  transition: .5s; }
+
+.pf_title {
+  color: #646B69;
+  font-family: "Oswald", sans-serif;
+  font-size: 26px;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 50px; }
+
+.pf_select select {
+  background: #E4E5E6;
+  width: 100%;
+  padding: 5px;
+  font-size: 14px;
+  font-family: "Source Sans Pro", sans-serif;
+  border: 1px solid #646B69;
+  border-radius: 3px;
+  height: 34px;
+  margin-bottom: 50px; }
+
+.pf_btns {
+  display: flex;
+  justify-content: space-between; }
+
+.submit_btn {
+  background: #5EAC57;
+  color: white;
+  width: 110px;
+  height: 35px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 12px;
+  border: none;
+  border-radius: 25px;
+  letter-spacing: 1px;
+  font-weight: 700; }
+
+.reset_btn {
+  background: white;
+  color: #5EAC57;
+  width: 110px;
+  height: 35px;
+  font-family: "Source Sans Pro", sans-serif;
+  font-size: 12px;
+  border: 2px solid #5EAC57;
+  border-radius: 25px;
+  letter-spacing: 1px;
+  font-weight: 700; }
+
 .dropbtn {
   background-color: #5EAC57;
   color: white;
