--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -16,6 +16,86 @@
     z-index: 15;
 }
 
+.pf_container {
+    position: absolute;
+    top: 15px;
+    left: 100px;
+    height: 525px;
+    width: 300px;
+    background: white;
+    border: 8px double $mainColor;
+    border-radius: 8px;
+    box-shadow: 2px 4px 15px $darkColor;
+    padding: 20px;
+    transition: .5s;
+}
+
+.pf_hide {
+    position: absolute;
+    top: 15px;
+    left: 100px;
+    height: 80px;
+    width: 300px;
+    background: white;
+    border: 8px double $mainColor;
+    border-radius: 8px;
+    box-shadow: 2px 4px 15px $darkColor;
+    padding: 20px;
+    transition: .5s;
+}
+
+.pf_title {
+    color: $darkColor;
+    font-family: $secondaryFontFamily;
+    font-size: 26px;
+    font-weight: 500;
+    text-align: center;
+    margin-bottom: 50px;
+}
+
+.pf_select select{
+    background: $mainBackgroundColor;
+    width: 100%;
+    padding: 5px;
+    font-size: 14px;
+    font-family: $mainFontFamily;
+    border: 1px solid $darkColor;
+    border-radius: 3px;
+    height: 34px;
+    margin-bottom: 50px;
+}
+
+.pf_btns {
+    display: flex;
+    justify-content: space-between;
+}
+
+.submit_btn {
+    background: $mainColor;
+    color: white;
+    width: 110px;
+    height: 35px;
+    font-family: $mainFontFamily;
+    font-size: 12px;
+    border: none;
+    border-radius: 25px;
+    letter-spacing: 1px;
+    font-weight: 700;
+}
+
+.reset_btn {
+    background: white;
+    color: $mainColor;
+    width: 110px;
+    height: 35px;
+    font-family: $mainFontFamily;
+    font-size: 12px;
+    border: 2px solid $mainColor;
+    border-radius: 25px;
+    letter-spacing: 1px;
+    font-weight: 700;
+}
+
 .dropbtn {
     background-color: $mainColor;
     color: white;
