--- a/src/components/Nav/Nav.scss
+++ b/src/components/Nav/Nav.scss
@@ -27,7 +27,7 @@
     border-radius: 8px;
     box-shadow: 2px 4px 15px $darkColor;
     padding: 20px;
-    transition: .5s;
+    // transition: .5s;
 }
 
 .pf_hide {
@@ -41,7 +41,8 @@
     border-radius: 8px;
     box-shadow: 2px 4px 15px $darkColor;
     padding: 20px;
-    transition: .5s;
+    // transition: .3s;
+    
 }
 
 .pf_title {
@@ -63,12 +64,18 @@
     border-radius: 3px;
     height: 34px;
     margin-bottom: 50px;
+    // visibility: hidden;
 }
 
 .pf_btns {
+    // visibility: hidden;
     display: flex;
     justify-content: space-between;
 }
+
+// .show {
+//     visibility: visible;
+// }
 
 .submit_btn {
     background: $mainColor;
