Stripe functioning. Cart empties after purchase.

--- a/src/components/Home/Home.scss
+++ b/src/components/Home/Home.scss
@@ -182,3 +182,10 @@
         text-decoration: none;
     }
 }
+
+.gallery_content {
+    height: 100%;
+    background-image: url('https://i.imgur.com/0BolPFq.jpg');
+    background-size: cover;
+    background-position: center center;
+}
