--- a/src/components/Home/Home.css
+++ b/src/components/Home/Home.css
@@ -146,3 +146,9 @@
   font-weight: 700; }
   .name_style a {
     text-decoration: none; }
+
+.gallery_content {
+  height: 100%;
+  background-image: url("https://i.imgur.com/0BolPFq.jpg");
+  background-size: cover;
+  background-position: center center; }
